N- header/footer-create

--- a/front-end/angular.json
+++ b/front-end/angular.json
@@ -34,7 +34,8 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              "src/assets"
             ],
             "styles": [
               "src/styles.css"
@@ -102,5 +103,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "9afdea1d-a835-4ba5-94a1-41e2ee9030d4"
   }
 }
